[gd_scene load_steps=3 format=3 uid="uid://1k20t4ihh1ko"]

[ext_resource type="Script" path="res://scripts/unites/general/interface/interfaceInfosUnite.gd" id="1_sdq13"]
[ext_resource type="PackedScene" uid="uid://dv1w0medjt16" path="res://nodes/Unite/interfaceUnite/fond_gris.tscn" id="2_qh0k2"]

[node name="PopUpInfosUnite" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
script = ExtResource("1_sdq13")
metadata/_edit_use_anchors_ = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="FondGrise" parent="UI" instance=ExtResource("2_qh0k2")]

[node name="Panel" type="Panel" parent="UI"]
editor_description = "Sert à visualiser comment ça rend(parece que y'a des probs avec le popUp"
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -200.0
offset_right = 199.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="FlowContainer" type="FlowContainer" parent="UI/Panel"]
layout_direction = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.9975
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RangeeImage" type="HBoxContainer" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ImageUnite" type="TextureRect" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeImage"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6

[node name="RangeeVie" type="HSplitContainer" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelPV" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeVie"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "PV = 20/20"
horizontal_alignment = 1

[node name="LabelDR" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeVie"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "DR = 10"

[node name="RangeeDegats" type="HSplitContainer" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelPuissance" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeDegats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "P = 20"
horizontal_alignment = 1

[node name="LabelDt" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeDegats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Dt = 2"

[node name="RangeeVS" type="HSplitContainer" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelVitesse" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeVS"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "V = 20"
horizontal_alignment = 1

[node name="LabelSagesse" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeVS"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "S = 10"

[node name="RangeeExperience" type="HSplitContainer" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelNiveau" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeExperience"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Niveau 1"
horizontal_alignment = 1

[node name="LabelXP" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeExperience"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "XP = 10(200)"

[node name="HSeparator" type="HSeparator" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2

[node name="RangeeCapacites" type="HBoxContainer" parent="UI/Panel/FlowContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="LabelCapacites" type="Label" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeCapacites"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Capacités :"

[node name="ContainerCapa" type="GridContainer" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeCapacites"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2

[node name="RangeeDescription" type="HBoxContainer" parent="UI/Panel/FlowContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelDescription" type="RichTextLabel" parent="UI/Panel/FlowContainer/VBoxContainer/RangeeDescription"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Description :"
fit_content = true
